force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( Opportunity__r.Account.IsPersonAccount,
Opportunity__r.Account.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Account.LastName,Opportunity__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>