force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Type</valueSetName>
    </valueSet>
</CustomField>