force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Combined__c.field-meta.xml
<CustomField>
    <fullName>Combined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combined</label>
    <type>Checkbox</type>
</CustomField>