force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Combined_With__c.field-meta.xml
<CustomField>
    <fullName>Combined_With__c</fullName>
    <label>Combined With</label>
    <length>50</length>
    <type>Text</type>
</CustomField>