force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Customer_Bank__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Bank</label>
    <referenceTo>AR_Bank__c</referenceTo>
    <relationshipName>Post_Dated_Cheques1</relationshipName>
    <type>Lookup</type>
</CustomField>