force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Installment_Id__c.field-meta.xml
<CustomField>
    <fullName>Installment_Id__c</fullName>
    <label>Installment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>