force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Is_Recall_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Is_Recall_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recall Replacement</label>
    <type>Checkbox</type>
</CustomField>