force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <formula>Inventory__r.Project_Inv__r.Legal_Entity_CL__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity</label>
    <type>Text</type>
</CustomField>