force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Custody</fullName>
            </value>
            <value>
                <fullName>In Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>