force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Name_On_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Cheque__c</fullName>
    <label>Name On Cheque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>