force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Oracle_EBS_Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_EBS_Receipt_Id__c</fullName>
    <externalId>true</externalId>
    <label>Oracle EBS Receipt Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>