force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/PDC_Acknowledgement_Number__c.field-meta.xml
<CustomField>
    <fullName>PDC_Acknowledgement_Number__c</fullName>
    <label>PDC Acknowledgement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>