force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/PDC_To_Replace_Id__c.field-meta.xml
<CustomField>
    <fullName>PDC_To_Replace_Id__c</fullName>
    <label>PDC To Replace Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>