force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Hidden field used to create Case PDC</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>