force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Remittance_Bank__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Bank</label>
    <referenceTo>AR_Bank__c</referenceTo>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>