force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Remittance_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AR_Bank_Account__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AR_Bank_Account__c</referenceTo>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>