force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Replacement_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Cheque_Number__c</fullName>
    <label>Replacement Cheque Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>