force-app/main/default/objects/AR_Post_Dated_Cheque__c/fields/Requested_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Release_Date__c</fullName>
    <label>Requested Release Date</label>
    <type>Date</type>
</CustomField>